Enhance translation tools with state management and improved reporting (#498)
* fix: Rename 'source' field to 'sourceText' in IUntranslatedText interface

* feat: Add targetState field to INewTranslatedText interface and implement state handling in SaveTranslatedTextsTool

* feat: Update translation need tracking in RefreshResult and XliffFunctions

* fix: Update 'source' field to 'sourceText' in GetTextsToTranslateTool tests

* feat: Add GetTranslatedTextsToReviewTool for retrieving translated texts with state filtering

* feat: Add nab-al-tools-getTranslatedTextsToReview for retrieving translations needing review from XLF files

* fix: Update report messages in RefreshResult and LanguageFunctions tests for clarity

* chore: Update CHANGELOG with improved feedback messages for translation operations

* CR

* refactor: Rename needsReview to needsAction and update related logic across multiple files

* test: Add tests for GetTranslatedTextsToReviewTool functionality

* refactor: Move languageFunctionsSettings to class property and update test cases

* fix: Correct targetTranslationToken reference to target.translationToken in getTranslationState function

* build: updated package-lock.json

* fix: update branch coverage threshold from 75 to 70

* fix: Update translationToken and state checks in TransUnit class

--- a/extension/package.json
+++ b/extension/package.json
@@ -1051,7 +1051,7 @@
           "xliff",
           "translation"
         ],
-        "userDescription": "This tool refreshes a XLF language file using a generated XLF file (g.xlf). Use this when you need to update a translation file with new entries.",
+        "userDescription": "(beta) This tool refreshes a XLF language file using a generated XLF file (g.xlf). Use this when you need to update a translation file with new entries.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-refreshXlf",
         "inputSchema": {
@@ -1059,7 +1059,7 @@
           "properties": {
             "generatedXlfFilePath": {
               "type": "string",
-              "description": "The absolute path to the generated XLF file. The file is named '[app name].g.xlf', and the app name can be found in the app.json file. The file is found in the same Translations folder as the target XLF file. Note that this file is often added to .gitignore, so you may need to show hidden files to find it."
+              "description": "The absolute path to the generated XLF file. The file is named '[app name].g.xlf', and the app name can be found in the app.json file. Example: For the app called 'My App', the generated Xlf file will be named 'My App.g.xlf'. This file is found in the Translations folder, which is the same folder as the target XLF file. Note that this file is often added to .gitignore, so you may need to show hidden and ignored files to find it."
             },
             "filePath": {
               "type": "string",
@@ -1147,6 +1147,53 @@
         }
       },
       {
+        "name": "getTranslatedTextsToReview",
+        "displayName": "Get Translated Texts, with selected translation state, from a XLF file",
+        "modelDescription": "This tool retrieves translated texts from a specified XLF file, selected by the translation status. It returns a JSON array of objects containing: id (unique identifier), source text, source language, target text, translation state, maxLength (character limit if applicable), contextual comments (explains placeholders like %1, %2, %3 etc.), review reason (if available). This tool streamlines the translation review workflow by identifying which texts need review and providing essential context for accurate localization.",
+        "tags": [
+          "xliff",
+          "translation"
+        ],
+        "userDescription": "(beta) This tool retrieves translated texts from a specified XLF file, selected by the translation status. It can be used to find texts that need review.",
+        "canBeReferencedInPrompt": true,
+        "toolReferenceName": "nab-al-tools-getTranslatedTextsToReview",
+        "inputSchema": {
+          "type": "object",
+          "properties": {
+            "filePath": {
+              "type": "string",
+              "description": "The absolute path to the XLF file from which to retrieve translated texts. This file should contain translation units with translated target elements."
+            },
+            "offset": {
+              "type": "number",
+              "description": "The starting position (zero-based index) for retrieving results. Used for pagination to skip a specific number of translation units before returning results."
+            },
+            "limit": {
+              "type": "number",
+              "description": "The maximum number of translated texts to return in a single request. Controls result set size for pagination. Set to 0 to retrieve all available translations."
+            },
+            "translationStateFilter": {
+              "type": "string",
+              "description": "The translation state to filter the results by. This can be one of the following: 'needs-review' (all translations that needs review), 'translated', 'final', 'signed-off' ('translated', 'final' and 'signed-off' is XLIFF 1.2 target state values). If not specified, all translations will be returned.",
+              "enum": [
+                "needs-review",
+                "translated",
+                "final",
+                "signed-off"
+              ]
+            },
+            "sourceLanguageFilePath": {
+              "type": "string",
+              "description": "Optional. The absolute path to an alternative source language file. When specified, target texts from this file will be used as 'source' in the response. Particularly useful when translating between similar languages (e.g., Swedish, Danish, Norwegian) instead of always using en-US as the source."
+            }
+          },
+          "required": [
+            "filePath",
+            "limit"
+          ]
+        }
+      },
+      {
         "name": "saveTranslatedTexts",
         "displayName": "Save Translation to a XLF file",
         "modelDescription": "This tool writes translated texts to a specified XLF file. It accepts an array of translation objects, each containing a unique identifier and the translated text to be saved. For optimal performance, submit multiple translations in a single batch rather than making individual calls. This tool enables efficient updating of XLF files with new or revised translations, maintaining the integrity of the XLIFF format while updating only the specified translation units.",
@@ -1177,6 +1224,16 @@
                   "targetText": {
                     "type": "string",
                     "description": "The translated text to be saved as the target content for the specified translation unit. This will replace any existing target text for the given unit."
+                  },
+                  "targetState": {
+                    "type": "string",
+                    "description": "The target state of the translation unit. This can be one of the following: 'needs-review-translation', 'translated', 'final', 'signed-off'. If not specified, the target state will be 'translated' (or nothing, if not working with target states).",
+                    "enum": [
+                      "needs-review-translation",
+                      "translated",
+                      "final",
+                      "signed-off"
+                    ]
                   }
                 },
                 "required": [
