--- a/extension/package.json
+++ b/extension/package.json
@@ -1045,7 +1045,7 @@
     "languageModelTools": [
       {
         "name": "refreshXlf",
-        "displayName": "Refresh a XLF file from a generated XLF file",
+        "displayName": "Refresh an XLF file from a generated XLF file",
         "modelDescription": "This tool refreshes a XLF language file using the generated XLF file. It takes two parameters: the path to the generated XLF file (named <appname>.g.xlf) and the path to the target XLF file to be refreshed. The tool preserves existing translations while adding new translation units from the generated file. It maintains the state of translated units and sorts the file according to the g.xlf structure.",
         "tags": [
           "xliff",
@@ -1074,7 +1074,7 @@
       },
       {
         "name": "getTextsToTranslate",
-        "displayName": "Get texts to translate from a XLF file",
+        "displayName": "Get texts to translate from an XLF file",
         "modelDescription": "This tool retrieves untranslated texts from a specified XLF file. It returns a JSON array of objects containing: id (unique identifier), source text (to be translated), source language, maxLength (character limit if applicable), and contextual comments (explains placeholders like %1, %2, %3 etc.). This tool streamlines the translation workflow by identifying which texts need translation and providing essential context for accurate localization.",
         "tags": [
           "xliff",
@@ -1111,7 +1111,7 @@
       },
       {
         "name": "getTranslatedTextsMap",
-        "displayName": "Get Translated Texts Map from a XLF file",
+        "displayName": "Get Translated Texts Map from an XLF file",
         "modelDescription": "This tool retrieves previously translated texts from a specified XLF file. It returns a JSON array of translation objects, each containing the source text mapped to its corresponding target translations (one or more). This tool helps maintain translation consistency by providing access to existing translations, allowing you to reference previously translated terminology and phrases when working on new content.",
         "tags": [
           "xliff",
@@ -1148,7 +1148,7 @@
       },
       {
         "name": "getTranslatedTextsByState",
-        "displayName": "Get Translated Texts By State from a XLF file",
+        "displayName": "Get Translated Texts By State from an XLF file",
         "modelDescription": "This tool retrieves translated texts from a specified XLF file, filtered by their translation state. It returns a JSON array of objects containing: id (unique identifier), source text, source language, target text, translation state, review reason (if available), maxLength (character limit if applicable), and contextual comments (explains placeholders like %1, %2, %3 etc.). This tool streamlines the translation workflow by allowing you to filter translations by their state (e.g., 'needs-review', 'translated', 'final', 'signed-off') and providing essential context for accurate localization.",
         "tags": [
           "xliff",
@@ -1195,7 +1195,7 @@
       },
       {
         "name": "saveTranslatedTexts",
-        "displayName": "Save Translation to a XLF file",
+        "displayName": "Save Translation to an XLF file",
         "modelDescription": "This tool writes translated texts to a specified XLF file. It accepts an array of translation objects, each containing a unique identifier and the translated text to be saved. For optimal performance, submit multiple translations in a single batch rather than making individual calls. This tool enables efficient updating of XLF files with new or revised translations, maintaining the integrity of the XLIFF format while updating only the specified translation units.",
         "tags": [
           "xliff",
