build: update vsce package installation and remove unnecessary files from package.json

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          npm install -g vsce
+          npm install -g @vscode/vsce
         working-directory: ${{env.working-directory}}
 
       - name: Pre-release on release
