--- a/extension/package.json
+++ b/extension/package.json
@@ -1046,7 +1046,7 @@
       {
         "name": "refreshXlf",
         "displayName": "Refresh an XLF file from a generated XLF file",
-        "modelDescription": "This tool refreshes a XLF language file using the generated XLF file. It takes two parameters: the path to the generated XLF file (named <appname>.g.xlf) and the path to the target XLF file to be refreshed. The tool preserves existing translations while adding new translation units from the generated file. It maintains the state of translated units and sorts the file according to the g.xlf structure.",
+        "modelDescription": "This tool refreshes and synchronizes a XLF language file using the generated XLF file. It takes two parameters: the path to the generated XLF file (named <appname>.g.xlf) and the path to the target XLF file to be refreshed. The tool synchronizes the target XLF file with the latest changes from the generated file by preserving existing translations while adding new translation units from the generated file. It maintains the state of translated units and sorts the file according to the g.xlf structure. This synchronization process ensures that the translation file stays up-to-date with the latest AL code changes without losing existing translation work.",
         "tags": [
           "xliff",
           "translation"
