feat: add vscode-dependency-test.ps1 script and integrate it into tests.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,3 +35,4 @@ jobs:
         shell: pwsh
         run: |
           & "./.github/workflows/scripts/cli-create-documentation-test.ps1"
+          & "./.github/workflows/scripts/vscode-dependency-test.ps1"
