feat: add command to show MCP Server information with detailed usage instructions

--- a/extension/package.json
+++ b/extension/package.json
@@ -299,6 +299,10 @@
       {
         "command": "nab.CopilotInlineChat",
         "title": "NAB: Start Copilot Inline Chat with predefined prompts"
+      },
+      {
+        "command": "nab.showMcpServerInfo",
+        "title": "NAB: Show MCP Server Information"
       }
     ],
     "keybindings": [
