feat: register NAB AL Tools MCP server and update tool names for consistency

--- a/extension/package.json
+++ b/extension/package.json
@@ -53,6 +53,12 @@
   ],
   "main": "./dist/nab-al-tools.js",
   "contributes": {
+    "mcpServerDefinitionProviders": [
+      {
+        "id": "nab-al-tools-mcp",
+        "label": "NAB AL Tools MCP Server"
+      }
+    ],
     "menus": {
       "commandPalette": [
         {
