--- a/extension/package.json
+++ b/extension/package.json
@@ -37,7 +37,7 @@
     "url": "https://github.com/jwikman/nab-al-tools/issues"
   },
   "engines": {
-    "vscode": "^1.99.0",
+    "vscode": "^1.102.0",
     "node": "^20.0.0"
   },
   "categories": [
@@ -53,6 +53,12 @@
   ],
   "main": "./dist/nab-al-tools.js",
   "contributes": {
+    "mcpServerDefinitionProviders": [
+      {
+        "id": "nab-al-tools-mcp-server",
+        "label": "NAB AL Tools MCP Server"
+      }
+    ],
     "menus": {
       "commandPalette": [
         {
@@ -299,6 +305,10 @@
       {
         "command": "nab.CopilotInlineChat",
         "title": "NAB: Start Copilot Inline Chat with predefined prompts"
+      },
+      {
+        "command": "nab.showMcpServerInfo",
+        "title": "NAB: Show MCP Server Information"
       }
     ],
     "keybindings": [
@@ -1056,7 +1066,7 @@
           "business-central",
           "dynamics-365"
         ],
-        "userDescription": "(beta) This tool refreshes a XLF language file using a generated XLF file (g.xlf). Use this when you need to update a translation file with new entries.",
+        "userDescription": "(deprecated) This tool refreshes a XLF language file using a generated XLF file (g.xlf). Please use the MCP server tools instead for better cross-platform compatibility.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-refreshXlf",
         "inputSchema": {
@@ -1090,7 +1100,7 @@
           "business-central",
           "dynamics-365"
         ],
-        "userDescription": "(beta) This tool retrieves untranslated texts from a specified XLF file. It can be used to find texts that need translation.",
+        "userDescription": "(deprecated) This tool retrieves untranslated texts from a specified XLF file. Please use the MCP server tools instead for better cross-platform compatibility.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-getTextsToTranslate",
         "inputSchema": {
@@ -1132,7 +1142,7 @@
           "business-central",
           "dynamics-365"
         ],
-        "userDescription": "(beta) This tool retrieves translated texts from a specified XLF file. It can be used to find texts that have already been translated.",
+        "userDescription": "(deprecated) This tool retrieves translated texts from a specified XLF file. Please use the MCP server tools instead for better cross-platform compatibility.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-getTranslatedTextsMap",
         "inputSchema": {
@@ -1174,7 +1184,7 @@
           "business-central",
           "dynamics-365"
         ],
-        "userDescription": "(beta) This tool retrieves translated texts from a specified XLF file, filtered by their translation state. Use it to find texts in specific states such as 'needs-review', 'translated', 'final', or 'signed-off'.",
+        "userDescription": "(deprecated) This tool retrieves translated texts from a specified XLF file, filtered by their translation state. Please use the MCP server tools instead for better cross-platform compatibility.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-getTranslatedTextsByState",
         "inputSchema": {
@@ -1230,7 +1240,7 @@
           "business-central",
           "dynamics-365"
         ],
-        "userDescription": "(beta) This tool saves a translation to a specified XLF file. It can be used to save translations for texts that have been translated.",
+        "userDescription": "(deprecated) This tool saves a translation to a specified XLF file. Please use the MCP server tools instead for better cross-platform compatibility.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-saveTranslatedTexts",
         "inputSchema": {
@@ -1299,6 +1309,7 @@
     "coverage:report": "npx nyc report --reporter=lcov --reporter=text-summary --check-coverage"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.15.0",
     "@xmldom/xmldom": "^0.7.9",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^2.2.0",
@@ -1314,7 +1325,8 @@
     "strip-json-comments": "^3.1.1",
     "time-stamp": "^1.1.0",
     "txml": "^4.0.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -1330,7 +1342,7 @@
     "@types/node-powershell": "^3.1.1",
     "@types/semver": "^7.3.5",
     "@types/uuid": "^8.3.3",
-    "@types/vscode": "^1.99.0",
+    "@types/vscode": "^1.102.0",
     "@types/xmldom": "^0.1.30",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
