--- a/extension/package.json
+++ b/extension/package.json
@@ -1316,7 +1316,7 @@
     "original-fs": "^1.1.0",
     "replace-in-file": "^6.3.2",
     "semver": "^7.5.2",
-    "strip-json-comments": "^3.1.1",
+    "jsonrepair": "^3.13.0",
     "time-stamp": "^1.1.0",
     "txml": "^4.0.1",
     "uuid": "^8.3.0",
