feat: Rename getGlossary to getGlossaryTerms and update related documentation

--- a/extension/package.json
+++ b/extension/package.json
@@ -1328,7 +1328,7 @@
         }
       },
       {
-        "name": "getGlossary",
+        "name": "getGlossaryTerms",
         "displayName": "Get Glossary Terminology",
         "modelDescription": "This tool returns glossary terminology pairs for a target language (and optional source language, default en-US) from a built-in glossary, based on Business Central terminology and translations. It outputs a JSON array of objects with 'source', 'target', and 'description'. Usage scenarios: (1) Pre-translation session - fetch glossary to instruct the LLM for consistent terminology. (2) Automated suggestion generation - validate/adjust outputs against approved terms. (3) Review/QA - detect and highlight deviations from glossary entries. (4) Bulk alignment or terminology normalization workflows. (5) Cross-language comparison by specifying a non-default sourceLanguageCode.",
         "tags": [
@@ -1342,7 +1342,7 @@
         ],
         "userDescription": "(beta) Retrieve glossary terminology entries for a specified target language.",
         "canBeReferencedInPrompt": true,
-        "toolReferenceName": "nab-al-tools-getGlossary",
+        "toolReferenceName": "nab-al-tools-getGlossaryTerms",
         "inputSchema": {
           "type": "object",
           "properties": {
